--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,13 +6,14 @@
         <item
             android:id="@+id/Profiles"
             android:title="@string/Profiles">
-            <menu>
+            <menu  android:id="@+id/addTomenu">
                 <item
                     android:id="@+id/home"
-
+                    android:orderInCategory="100"
                     android:title="User name" />
                 <item
                     android:id="@+id/add_dependent"
+                    android:orderInCategory="1000"
                     android:icon="@drawable/ic_baseline_add_circle_24"
                     android:title="@string/add_dependent" />
             </menu>
