--- a/app/src/main/res/layout/activity_notification_dialog.xml
+++ b/app/src/main/res/layout/activity_notification_dialog.xml
@@ -10,49 +10,79 @@
         android:id="@+id/openDialogeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="30dp"
         android:text="open dialoge"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNameTextViewww" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/notifyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="153dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="56dp"
         android:text="notify"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicineNameTextViewww" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/storeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="198dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="47dp"
         android:text="store"
-        app:layout_constraintStart_toEndOf="@+id/openDialogeButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/openDialogeButton" />
 
     <TextView
         android:id="@+id/userNameTextViewww"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="61dp"
         android:text="user name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/storeButton" />
 
     <TextView
         android:id="@+id/medicineNameTextViewww"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="61dp"
+        android:layout_marginEnd="64dp"
         android:text="medicine name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/updateButton" />
+
+    <Button
+        android:id="@+id/getButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="47dp"
+        android:text="get"
+        app:layout_constraintStart_toEndOf="@+id/storeButton"
+        app:layout_constraintTop_toBottomOf="@+id/openDialogeButton" />
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="8dp"
+        android:text="update"
+        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
+        app:layout_constraintTop_toBottomOf="@+id/notifyButton" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="3dp"
+        android:text="delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notifyButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
