--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -8,8 +8,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="75dp"
-        android:layout_height="71dp"
+        android:layout_width="96dp"
+        android:layout_height="80dp"
         android:layout_marginHorizontal="12dp"
         android:layout_marginVertical="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:text="TextView"
         android:textSize="16sp"
@@ -35,20 +35,18 @@
         android:id="@+id/ageTextViewId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/nameTextViewId"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextViewId"
-        app:layout_constraintVertical_bias="0.388" />
+        app:layout_constraintStart_toEndOf="@+id/nameTextViewId"
+        app:layout_constraintTop_toTopOf="@+id/nameTextViewId" />
 
     <TextView
         android:id="@+id/emailTextViewId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="14dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/ageTextViewId"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/nameTextViewId"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextViewId" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
