finishing firestore and check for network

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,8 +55,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="52dp"
                 android:backgroundTint="@color/white"
-                app:icon="@drawable/google_icon"
                 android:text="Google"
+                android:textAlignment="center"
+                app:iconGravity="start"
+                app:icon="@drawable/google_icon"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
