--- a/app/src/main/res/layout/fragment_dependent_info.xml
+++ b/app/src/main/res/layout/fragment_dependent_info.xml
@@ -98,8 +98,8 @@
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/textView7">
+                app:layout_constraintStart_toStartOf="@+id/Condition"
+                app:layout_constraintTop_toBottomOf="@+id/Condition">
 
                 <RadioButton
                     android:id="@+id/maleRadioBtniD"
@@ -124,7 +124,7 @@
                 android:inputType="none"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/Condition"
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
                 tools:ignore="SpeakableTextPresentCheck"
                 android:focusableInTouchMode="true"
@@ -132,7 +132,7 @@
                 android:focusable="false" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/Condition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -147,7 +147,7 @@
                 android:layout_marginTop="7dp"
                 android:focusable="false"
                 android:text="Birthdate"
-                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/Condition"
                 app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
