--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,6 +11,9 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorPrimaryDark">#3F51B5</item>
+        <item name="colorAccent">#03A9F4</item>
+
         <!-- Customize your theme here. -->
     </style>
 
@@ -18,7 +21,7 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
-    <style name="MyMaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="MyMaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Add attributes here -->
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryDark">#2196F3</item>
