--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,7 +25,7 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
-    <style name="MyMaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="MyMaterialTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Add attributes here -->
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryDark">#2196F3</item>
